# PaceMyRace

./: Makefile  README.md  environment.yml  pyproject.toml  run_sessions.db
docs/: mkdocs.yml
docs/docs/: index.md
pacemyrace/: __init__.py  dataset.py  features.py  plots.py
pacemyrace/app/: home.py  utils.py
pacemyrace/app/data/: create_db.py  googlecalendar.py
pacemyrace/app/pages/: Add_an_activity.py  Planning.py  Previous_Activities.py
pacemyrace/database/: create_db.py
pacemyrace/modeling/: predict.py  train.py
