[tool.poetry]
name = "pacemyrace"
version = "0.1.0"
description = "This project focuses on creating an app to schedule running sessions and track performance with a simple dashboard showing recent session stats."
authors = ["Lucie <lgabagnou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
streamlit-calendar = "^1.2.0"
pandas = "^2.2.3"
sqlalchemy = "^2.0.35"
stravalib = "^2.0"
folium = "^0.17.0"
tqdm = "^4.66.5"
ipykernel = "^6.29.5"


[tool.poetry.group.jupyter.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
